examples/codegen/effects/state.an
effect Use a with
    get: fn Unit -> a
    set: fn a -> Unit

use_state (y: I32) =
    x = get () : I32
    set (x + y)
    state = get () : I32
    print "Ending state = ${state}"
    state

state (f: fn Unit -> a can Use s) (initial: s) {Copy s}: a =
    var state = initial
    handle f ()
    | get () -> resume state
    | set new_state ->
        state := new_state
        resume ()

main () =
    use_state 10 ~> state 1
    use_state 20 ~> state 2

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/effects/state.an:9:27
//  8 |     state = get () : I32
//  9 |     print "Ending state = ${state}"	// error: Expected the end of this block but found `${`
//    |                           ^^
// 10 |     state
// 
// Found 1 error and 0 warnings

